# cottontail

./: .gitignore  Cargo.toml  README.md  TODO.md  install.bat
ct_assetbaker/: Cargo.toml
ct_assetbaker/src/: aseprite.rs  aseprite_reader.rs  aseprite_test.rs  aseprite_test2.rs  atlas.rs  atlas_packer.rs  bitmapfont.rs  main.rs  main_assetbaker.rs
ct_executable_packager/: Cargo.toml
ct_executable_packager/resources/: versioninfo.rc
ct_executable_packager/src/: main_executable_packager.rs
ct_launcher/: Cargo.toml
ct_launcher/src/: main.rs  renderer_opengl.rs  renderer_software.rs
ct_lib/: Cargo.toml
ct_lib/src/: atlas_packer.rs  audio.rs  bitmap.rs  bitmap_atlas.rs  bitmap_font.rs  bitmapfont.rs  color.rs  draw.rs  draw_common.rs  font.rs  grid.rs  lib.rs  lib_ct.rs  platform_desktop.rs  random.rs  sprite.rs  system.rs  system_wasm.rs  system_windows.rs
ct_lib/src/game/: assets.rs  input.rs  mod_game.rs
ct_lib/src/math/: easing.rs  intersection.rs  mod_math.rs  rect.rs  recti.rs  vec2.rs  vec2i.rs  vec3.rs
ct_lib_audio/: .gitignore  Cargo.toml
ct_lib_audio/src/: audio.rs  lib_audio.rs
ct_lib_core/: Cargo.toml
ct_lib_core/src/: lib_core.rs  platform_desktop.rs  platform_wasm.rs
ct_lib_draw/: Cargo.toml
ct_lib_draw/src/: bitmap.rs  color.rs  draw.rs  draw_common.rs  font.rs  grid.rs  lib_draw.rs  sprite.rs
ct_lib_game/: Cargo.toml
ct_lib_game/src/: animations_fx.rs  assets.rs  camera.rs  choreographer.rs  debug.rs  debug_scenes.rs  easyapi.rs  gui.rs  input.rs  lib_game.rs
ct_lib_image/: Cargo.toml
ct_lib_image/src/: bitmap.rs  color.rs  font.rs  grid.rs  lib_image.rs
ct_lib_math/: Cargo.toml
ct_lib_math/src/: intersection.rs  lib_math.rs  mat4.rs  random.rs  rect.rs  vec2.rs  vec2i.rs  vec4.rs
ct_lib_platform/: Cargo.toml
ct_lib_platform/src/: renderer_opengl.rs  sdl_app.rs  sdl_audio.rs  sdl_window.rs  wasm_app.rs  wasm_audio.rs
ct_lib_window/: Cargo.toml
ct_lib_window/src/: input.rs  lib_window.rs  renderer_opengl.rs  sdl_app.rs  sdl_audio.rs  sdl_window.rs  wasm_app.rs  wasm_input.rs
ct_lib_window/src/platform_sdl2/: sdl_app.rs  sdl_audio.rs  sdl_input.rs  sdl_window.rs
ct_lib_window/src/platform_wasm/: wasm_app.rs  wasm_audio copy.rs  wasm_audio.rs  wasm_input.rs
ct_makeproject/: Cargo.toml
ct_makeproject/project_template/: Cargo.toml  assets_autobake.bat  project_refresh.cmd  template#assets_autobake.bat  template#windows_build_shipping.cmd  template_norefresh#LICENSE.txt  template_norefresh#README.md  web_build.bat  web_build.cmd  web_build_release.bat  web_serve.cmd
ct_makeproject/project_template/launcher/: template#main_launcher.rs  template_norefresh#Cargo.toml
ct_makeproject/project_template/launcher/src/: template#main_launcher.rs  template_norefresh#game.rs
ct_makeproject/project_template/launcher/web/: template#index.html  template#manifest.json
ct_makeproject/project_template/template_norefresh#assets/: 181900__yurkobb__bus-engine-looped.license  bg_title.meta.json  bgboss.meta.json  credits.txt  drum.meta.json  engine_running.meta.json  engine_standing.meta.json  ghosty.ase  loop_bell.meta.json  super_seasonal_platformer_tiles.license
ct_makeproject/project_template/template_norefresh#assets/audio/: bg_title.audiometa.json  bg_title.meta.json  bgboss.meta.json  drum.meta.json  engine_running.meta.json  engine_standing.license  engine_standing.meta.json  loop_bell.meta.json
ct_makeproject/project_template/template_norefresh#assets/example/audio/: drum.audiometa.json  engine_running.audiometa.json  engine_standing.audiometa.json  loop_bell.audiometa.json
ct_makeproject/project_template/template_norefresh#assets/example/fonts/: Grand9K_Pixel.font_drawstyle.json  Grand9K_Pixel.font_drawstyles.json  default_tiny.font_drawstyles.json
ct_makeproject/project_template/template_norefresh#assets/example/sprites/: test_wall.ase
ct_makeproject/project_template/template_norefresh#assets/fonts/: font_drawstyles.json
ct_makeproject/project_template/template_norefresh#assets/sprites/: background.ase  crosshair.ase  sorcy.ase  susi_base_3d.ase  test_tile.ase
ct_makeproject/src/: main.rs  main_makeproject.rs
ct_makeproject/templates_assets/: template__assets_autobake.bat  template__credits.txt
ct_makeproject/templates_assets/assets/fonts/Proggy/: Proggy.license
ct_makeproject/templates_executable/: template__Cargo.toml  template__interface.rs  template__main.rs  template__main_launcher.rs  template__main_launcher_info.rs
ct_makeproject/templates_repository/: template__.gitignore  template__Cargo.toml  template__README.md  template__git_merge_upstream_changes.bat  template__git_push.bat  template__git_update_cottontail.bat  template__project_refresh.bat
ct_makeproject/templates_vscode/: template__launch.json  template__tasks.json
ct_makeproject/templates_windows/: template__versioninfo.rc  template__windows_build_shipping.bat  template__windows_sign_executable.bat
ct_platform/: Cargo.toml
ct_platform/src/: lib_platform.rs  renderer_opengl.rs  sdl_app.rs  sdl_audio.rs  sdl_input.rs  sdl_window.rs  wasm_app.rs  wasm_audio.rs  wasm_input.rs
snippet_warehouse/ct_assetbaker_with_aseprite_parsing/resources/: sorcy_test.ase  sorcy_test.license
snippet_warehouse/ct_assetbaker_with_aseprite_parsing/src/: aseprite.rs  aseprite_reader.rs  main_assetbaker.rs
src/: lib_cottontail.rs
