[package]
name = "ct_assetbaker"
version = "0.1.0"
authors = ["Jakob Schwab <j.schwab@mail.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.3"
serde = "1.0"
bincode = "1.2"
serde_derive = "1.0"
serde_json = "1.0"
fern = "0.6"
log = "0.4"
ico = "0.1"

[dependencies.ct_lib]
path = "../ct_lib"

[[bin]]
path = "src/main_assetbaker.rs"
name = "ct_assetbaker"