[package]
name = "ct_assetbaker"
version = "0.1.0"
authors = ["Jakob Schwab <j.schwab@mail.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.3"
fern = "0.6"
ico = "0.1"
serde = "1.0"

[dependencies.ct_lib]
path = "../ct_lib"

[[bin]]
path = "src/main_assetbaker.rs"
name = "ct_assetbaker"