[package]
name = "ct_executable_packager"
version = "0.1.0"
authors = ["Jakob Schwab <j.schwab@mail.de>"]
edition = "2018"

[[bin]]
path = "src/main_executable_packager.rs"
name = "ct_executable_packager"

[dependencies]
ct_lib_image = { path = "../ct_lib_image" }
ct_lib_core = { path = "../ct_lib_core" }
ct_lib_math = { path = "../ct_lib_math" }

mustache = "0.9.0"
ico = "0.1.0"
serde = "1.0.118"
