[package]
name = "ct_launcher"
version = "0.1.0"
authors = ["Jakob Schwab <j.schwab@mail.de>"]
edition = "2018"
default-run = "ct_launcher"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glow = { version="0.4", default-features=false, features=["sdl2"]}
sdl2 = "0.32"
fern = "0.5"
log = "0.4"
backtrace = "0.3"

[dependencies.gamelib]
path = "../../gamelib"

[dependencies.ct_lib]
path = "../ct_lib"