[package]
name = "ct_lib"
version = "0.1.0"
authors = ["Jakob Schwab <j.schwab@mail.de>"]
edition = "2018"

[lib]
path = "src/lib_ct.rs"

[dependencies]
log = "0.4.11"
ezing = "0.2.1"
indexmap = { version = "1.3.2", features = ["serde-1"] } 
png = "0.16.8"
num-traits = "0.2.14"
rand = "0.7.3"
rand_pcg = "0.2.1"
serde = "1.0.118"
serde_json ="1.0.60"
serde_derive = "1.0.118"
bincode = "1.2.1"
rect_packer = "0.2.1"
rusttype = "0.9.2"
hsl = "0.1.1"
audrey = "0.2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
walkdir = "2.3.1"
glob = "0.3.0"
easy_process = "0.2.0"
directories = "2.0.2"
fern = "0.6.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]

