[package]
name = "ct_lib"
version = "0.1.0"
authors = ["Jakob Schwab <j.schwab@mail.de>"]
edition = "2018"

[lib]
path = "src/lib_ct.rs"

[dependencies]
ct_lib_core = { path = "../ct_lib_core"}
ct_lib_math = { path = "../ct_lib_math"}
ct_lib_draw = { path = "../ct_lib_draw"}

audrey = "0.2.0"
serde = "1.0.118"
serde_derive = "1.0.118"
