[package]
name = "ct_lib_draw"
version = "0.1.0"
authors = ["Jakob Schwab <j.schwab@mail.de>"]
edition = "2018"

[lib]
path = "src/lib_draw.rs"

[dependencies]
ct_lib_math = { path = "../ct_lib_math"}
ct_lib_core = { path = "../ct_lib_core"}

serde = "1.0.118"
png = "0.16.8"
rect_packer = "0.2.1"
rusttype = "0.9.2"
hsl = "0.1.1"


