[package]
name = "ct_lib_window"
version = "0.1.0"
authors = ["Jakob Schwab <j.schwab@mail.de>"]
edition = "2018"

[lib]
path = "src/lib_window.rs"

[dependencies]
ct_lib_core = { path = "../ct_lib_core"}
ct_lib_math = { path = "../ct_lib_math"}
ct_lib_draw = { path = "../ct_lib_draw"}
ct_lib_image = { path = "../ct_lib_image"}
ct_lib_audio = { path = "../ct_lib_audio"}

serde = "1.0.118"
ringbuf = "0.2.2"
regex = "1.4.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glow = { version="0.7.0", default-features=false }
sdl2 = "0.34.3"
backtrace = "0.3.55"
gilrs = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
glow = { version="0.7.0", features=["web-sys"]}
js-sys = "0.3.46"
wasm-bindgen = "0.2.69"
web-sys = { version = "0.3.4", features = [
  'Performance',
  'Document',
  'Element',
  'DomRect',
  'EventTarget',
  'AddEventListenerOptions',
  'HtmlElement',
  'MouseEvent',
  'WheelEvent',
  'FocusEvent',
  'KeyboardEvent',
  'Touch',
  'TouchList',
  'TouchEvent',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
  'AudioContext', 
  'AudioContextOptions',
  'AudioNode',
  'AudioBuffer',
  'AudioDestinationNode',
  'AudioProcessingEvent',
  'ScriptProcessorNode',
  'AudioContextState',
  'ScreenOrientation',
  'OrientationLockType',
  'Screen'
] }