[package]
name = "ct_makeproject"
version = "0.1.0"
authors = ["Jakob Schwab <j.schwab@mail.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ct_lib_core = { path = "../ct_lib_core"}

heck = "0.3.2"
chrono = "0.4.19"
mustache = "0.9.0"

[[bin]]
path = "src/main_makeproject.rs"
name = "ct_makeproject"