[package]
name = "ct_platform"
version = "0.1.0"
authors = ["Jakob Schwab <j.schwab@mail.de>"]
edition = "2018"

[lib]
path = "src/lib_platform.rs"

[dependencies]
glow = { version="0.4", default-features=false, features=["sdl2"]}
sdl2 = "0.32"
fern = "0.5"
backtrace = "0.3"
serde = "1.0"

[dependencies.ct_lib]
path = "../ct_lib"