[package]
name = "ct_platform"
version = "0.1.0"
authors = ["Jakob Schwab <j.schwab@mail.de>"]
edition = "2018"

[lib]
path = "src/lib_platform.rs"

[dependencies]
ringbuf = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
serde = "1.0"
# glow = { version="0.6.1", default-features=false, features=["web-sys"]}
# Using git repo until https://github.com/grovesNL/glow/pull/137 is released
glow = { git = "https://github.com/grovesNL/glow", branch = "main", default-features=false}
sdl2 = "0.32"
fern = "0.5"
backtrace = "0.3"
gilrs = "0.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
serde = "1.0"
# glow = { version="0.6.1", features=["web-sys"]}
# Using git repo until https://github.com/grovesNL/glow/pull/137 is released
glow = { git = "https://github.com/grovesNL/glow", branch = "main", features=["web-sys"]}
js-sys = "0.3.46"
wasm-bindgen = "0.2.69"
log = "0.4"
web-sys = { version = "0.3.4", features = [
  'Performance',
  'Document',
  'Element',
  'DomRect',
  'EventTarget',
  'AddEventListenerOptions',
  'HtmlElement',
  'MouseEvent',
  'WheelEvent',
  'FocusEvent',
  'KeyboardEvent',
  'Touch',
  'TouchList',
  'TouchEvent',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
  'AudioContext', 
  'AudioContextOptions',
  'AudioNode',
  'AudioBuffer',
  'AudioDestinationNode',
  'AudioProcessingEvent',
  'ScriptProcessorNode',
  'AudioContextState',
  'ScreenOrientation',
  'OrientationLockType',
  'Screen'
] }

[dependencies.ct_lib]
path = "../ct_lib"