[workspace]
members = [
    "cottontail/*",
    "launcher",
]

# NOTE: The following optimizes dependencies (but not workspace members) 
[profile.dev.package."*"]
opt-level = 3

# NOTE: The following optimizes ct_lib_audio for debug builds
# [profile.dev.package.ct_lib_audio]
# opt-level = 3

# NOTE: The following overrides the whole project 
# [profile.dev]
# opt-level = 0
# debug = true

# NOTE: Enables link-time- and small-size-optimization on final release binary
# [profile.release]
# lto = true
# opt-level = "z"
# codegen-units = 1